<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/orange"
    tools:context=".view.LoginFragment"
    android:id="@+id/frame_layout_login">

    <ImageView
        android:id="@+id/imageview_close"
        android:layout_margin="@dimen/margin_medium"
        android:src="@drawable/ic_close"
        android:layout_width="@dimen/body_large"
        android:layout_height="@dimen/body_large"
        android:text="@string/hello_blank_fragment" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/textview_signin_with_mobile"
            style="@style/title_one_white"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_large"
            android:text="@string/sign_in_with_mobile"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/edittext_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_x_large"
            android:layout_margin="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_xx_large"
            android:background="@color/white"
            android:text="rairubik1996@gmail.com"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textview_signin_with_mobile" />

        <EditText
            android:id="@+id/edittext_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/margin_x_large"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginRight="@dimen/margin_x_large"
            android:background="@color/white"
            android:text="123Rubik"
            app:layout_constraintEnd_toEndOf="parent"
            android:inputType="textPassword"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edittext_email" />


        <CheckBox
            android:id="@+id/checkbox_remember_me"
            android:layout_width="35dp"
            android:layout_height="@dimen/check_box_dimen"
            android:layout_marginTop="@dimen/margin_medium"
            app:layout_constraintStart_toStartOf="@+id/edittext_password"
            app:layout_constraintTop_toBottomOf="@+id/edittext_password" />

        <TextView
            android:id="@+id/textview_remember_me"
            android:text="@string/remember_me"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginBottom="10dp"
            app:layout_constraintStart_toEndOf="@id/checkbox_remember_me"
            app:layout_constraintTop_toBottomOf="@+id/edittext_password"/>


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_x_large"
            android:layout_marginTop="@dimen/margin_xxxx_large"
            android:layout_marginRight="@dimen/margin_x_large"
            app:layout_constraintTop_toBottomOf="@+id/textview_remember_me">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_login"
                style="@style/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_x_large"
                android:text="@string/login"
                tools:ignore="MissingConstraints" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/button_need_an_account"
                style="@style/button_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/need_an_account"
                app:layout_constraintTop_toBottomOf="@id/button_login" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>